--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,17 +29,16 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.google.maps.android:android-maps-utils:0.3+'
-
     //network
     compile 'com.netflix.rxjava:rxjava-core:0.20.6'
     compile 'com.netflix.rxjava:rxjava-android:0.20.6'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.squareup.okio:okio:1.2.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+
     //uis libs
     compile 'com.github.traex.rippleeffect:library:1.2.4'
     compile 'me.drakeet.materialdialog:library:1.2.2'
-    compile 'it.neokree:MaterialTabs:0.11'
-    compile 'com.jpardogo.materialtabstrip:library:1.0.9'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
