--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,8 @@
     <uses-permission android:name="com.archtouch.appbus.maps.permission.MAPS_RECEIVE" />
 
     <application
-        android:name=".application.AppBusApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name_main"
         android:theme="@style/AppThemeBus">
         >
@@ -36,12 +35,8 @@
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".activitys.BusMapsActivity"
+            android:name=".activitys.BusMapActivity"
             android:label="@string/title_activity_bus_maps" >
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
         </activity>
 
         <activity
